# ing_ai

./: .env.sample  .gitignore  README.md  _serve_app.py  _serve_app_ray.py  create_wfmap_chart.py  inference_example.py  inference_example_gpt4.py  main.py  main_20241202v1.py  main_20250318v1.py  main_example.py  main_script.sh  pyproject.toml  requirements.txt  requirements_bk.txt  requirements_call.txt
_source/data/: predict.csv  test.csv  train.csv
_source/example/: request_inference.json  request_makedata.json  request_train.json
reference/: test.csv  train.csv
src/common/: config.py
src/doe/application/: make_data_interface.py
src/doe/interface/: make_data_interface.py
src/inference/interface/: inference_interface.py
src/ml/interface/: train_interface.py
temp/: autoversion_bundle.py  autoversion_models.py  autoversion_models20250813.py  create_chart.py  create_chart2.py  create_chart3.py  create_chart4.py  create_chart5.py  create_chart6.py  create_data_20250310.py  create_feature_importance_chart.py  db_injection_filter.py  db_injection_v2.py  db_injection_v3.py  db_injection_v7.py  graph_neural_network_geometric.py  hbm_bandwidth_model.py  hbm_v2.py  hbm_v3.py  hbm_v4.py  hbm_v5.py  hbm_v6.py  management_db  multi_fidelity_transfer_learning.py  physics_informed_neural_networks.py  recipe_reinforcement_learning.py  script20250812  temp20250804  weight_practical_bnn_monte_carlo_dropout.py  xyz_transfer_learning_example.py
tests/: test_train.py
