[project]
name = "project_ai_model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pytest==8.3.5",
    "transformers @ git+https://github.com/huggingface/transformers@0ebd6651acd32c982fee265b23243b89bdb89577",
    "python-dotenv==1.0.1",
]
